@@ -282,31 +282,43 @@ static isc_result_t
 base32_tobuffer(isc_lex_t *lexer, const char base[], bool pad,
 		isc_buffer_t *target, int length)
 {
+	unsigned int before, after;
 	base32_decode_ctx_t ctx;
 	isc_textregion_t *tr;
 	isc_token_t token;
 	bool eol;
 
+	REQUIRE(length >= -2);
+
 	base32_decode_init(&ctx, length, base, pad, target);
 
+	before = isc_buffer_usedlength(target);
 	while (!ctx.seen_end && (ctx.length != 0)) {
 		unsigned int i;
 
-		if (length > 0)
+		if (length > 0) {
 			eol = false;
-		else
+		} else {
 			eol = true;
+		}
 		RETERR(isc_lex_getmastertoken(lexer, &token,
 					      isc_tokentype_string, eol));
-		if (token.type != isc_tokentype_string)
+		if (token.type != isc_tokentype_string) {
 			break;
+		}
 		tr = &token.value.as_textregion;
-		for (i = 0; i < tr->length; i++)
+		for (i = 0; i < tr->length; i++) {
 			RETERR(base32_decode_char(&ctx, tr->base[i]));
+		}
 	}
-	if (ctx.length < 0 && !ctx.seen_end)
+	after = isc_buffer_usedlength(target);
+	if (ctx.length < 0 && !ctx.seen_end) {
 		isc_lex_ungettoken(lexer, &token);
+	}
 	RETERR(base32_decode_finish(&ctx));
+	if (length == -2 && before == after) {
+		return (ISC_R_UNEXPECTEDEND);
+	}
 	return (ISC_R_SUCCESS);
 }
 
