@@ -71,21 +71,29 @@ isc_base64_decodestring(const char *cstr, isc_buffer_t *target);
 isc_result_t
 isc_base64_tobuffer(isc_lex_t *lexer, isc_buffer_t *target, int length);
 /*!<
- * \brief Convert base64 encoded text from a lexer context into data.
+ * \brief Convert base64 encoded text from a lexer context into
+ * `target`. If 'length' is non-negative, it is the expected number of
+ * encoded octets to convert.
+ *
+ * If 'length' is -1 then 0 or more encoded octets are expected.
+ * If 'length' is -2 then 1 or more encoded octets are expected.
+ *
+ * Returns:
+ *\li	#ISC_R_BADBASE64 -- invalid base64 encoding.
+ *\li	#ISC_R_UNEXPECTEDEND: the text does not contain the expected
+ *			      number of encoded octets.
  *
  * Requires:
- *\li	'lex' is a valid lexer context
+ *\li	'lexer' is a valid lexer context
  *\li	'target' is a buffer containing binary data
- *\li	'length' is an integer
+ *\li	'length' is -2, -1, or non-negative
  *
  * Ensures:
  *\li	target will contain the data represented by the base64 encoded
- *	string parsed by the lexer.  No more than length bytes will be read,
- *	if length is positive.  The 'used' pointer in target will be
- *	advanced as necessary.
+ *	string parsed by the lexer.  No more than `length` octets will
+ *	be read, if `length` is non-negative.  The 'used' pointer in
+ *	'target' will be advanced as necessary.
  */
-
-
 
 ISC_LANG_ENDDECLS
 
