@@ -1,3 +1,6 @@
+5126.	[bug]		Named incorrectly accepted empty base64 and hex encoded
+			fields when reading master files. [GL #807]
+
 5125.	[bug]		Allow for up to 100 records or 64k of data when caching
 			a negative response. [GL #804]
 
